# btc-wallet

./: .gitignore  Cargo.toml  LICENSE  README.md
derive-tag/: Cargo.toml
derive-tag/src/: lib.rs
script-macro/: Cargo.toml
script-macro/src/: lib.rs
script-macro/tests/: script_macro.rs
src/: lib.rs
tag/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: base58.rs  lib.rs  script.rs
